# neural-network-from-scratch

./: .gitignore  CMakeLists.txt  NeuralNetworkExample.html  NeuralNetworkExample.js  NeuralNetworkExample.wasm  README.md  index.html
example/: CMakeLists.txt  main.cpp
example/include/: GUI.h  TrainSet.h  Utils.h
example/src/: GUI.cpp  TrainSet.cpp  main.cpp
include/: ActivationFunction.h  AlignedMemoryAllocator.h  DataSet.h  Layer.h  NeuralNetwork.h  matrix.h
include/NeuralNetwork/: ActivationFunction.h  AlignedMemoryAllocator.h  DataSet.h  Layer.h  Matrix.h  NeuralNetwork.h  matrix.h
src/: ActivationFunction.cpp  AlignedMemoryAllocator.cpp  DataSet.cpp  Layer.cpp  NeuralNetwork.cpp  main.cpp  matrix.cpp
src/NeuralNetwork/: ActivationFunction.cpp  AlignedMemoryAllocator.cpp  DataSet.cpp  Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  main.cpp
test/: AlignedMemoryAllocatorTest.cpp  AllignedMemoryAllocatorTest.cpp  CMakeLists.txt  MatrixTest.cpp
